# syncmoor

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
app/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
crates/gfs-cli/: Cargo.toml
crates/gfs-cli/src/: main.rs
crates/gfs-core/: Cargo.toml
crates/gfs-core/src/: config.rs  daemon.rs  git.rs  lib.rs  status.rs  watcher.rs
crates/gfs-core/tests/: sync_e2e.rs
docs/: architecture.md  conflict-resolution.md
