[package]
name        = "gfs-cli"
description = "Headless CLI for syncmoor."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true

[[bin]]
name = "gfs"
path = "src/main.rs"

[dependencies]
gfs-core   = { path = "../gfs-core" }
clap       = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
