[package]
name        = "gfs-core"
description = "Continuous bidirectional git folder sync — daemon core."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true

[lib]
name = "gfs_core"
path = "src/lib.rs"

[dependencies]
tokio                  = { workspace = true }
tokio-stream           = { workspace = true }
futures-util           = { workspace = true }
anyhow                 = { workspace = true }
thiserror              = { workspace = true }
tracing                = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
toml                   = { workspace = true }
chrono                 = { workspace = true }
ulid                   = { workspace = true }
notify                 = { workspace = true }
notify-debouncer-full  = { workspace = true }
rusqlite               = { workspace = true }

[dev-dependencies]
tempfile         = "3"
tokio            = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
